Added z-index for menu

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -212,6 +212,7 @@ header {
             &:hover {
               ul {
                 display: block;
+                z-index: 10;
               }
             }
           }
