Correct syntax Error

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,7 +20,8 @@
 @import "components/section--feedback";
 @import "components/section--features";
 @import "components/section--promoted";
+@import "components/gallery-box";
 
 body {
-  font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
