Start adding star rating system

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,9 +2,7 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto heading">
-          <h3>New furniture</h3>
-        </div>
+        <div class="col-auto heading"><h3>New furniture</h3></div>
         <div class="col menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
@@ -37,9 +35,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            <div class="stars" id="product-rating">
+              <a href="#" class="star star-all full" data-star="1"></a>
+              <a href="#" class="star star-all full" data-star="2"></a>
+              <a href="#" class="star star-all" data-star="3"></a>
+              <a href="#" class="star star-all" data-star="4"></a>
+              <a href="#" class="star star-all" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -48,9 +49,7 @@
               <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
@@ -67,9 +66,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            <div class="stars" id="product-rating2">
+              <a href="#" class="star star-all full" data-star="1"></a>
+              <a href="#" class="star star-all full" data-star="2"></a>
+              <a href="#" class="star star-all" data-star="3"></a>
+              <a href="#" class="star star-all" data-star="4"></a>
+              <a href="#" class="star star-all" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -80,9 +82,7 @@
                 ><i class="fas fa-exchange-alt"></i
               ></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
@@ -99,11 +99,15 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            <div class="stars" id="product-rating">
+              <a href="#" class="star star-all full" data-star="1"></a>
+              <a href="#" class="star star-all full" data-star="2"></a>
+              <a href="#" class="star star-all" data-star="3"></a>
+              <a href="#" class="star star-all" data-star="4"></a>
+              <a href="#" class="star star-all" data-star="5"></a>
             </div>
           </div>
+          ,
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
@@ -112,9 +116,7 @@
                 ><i class="fas fa-exchange-alt"></i
               ></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
@@ -131,9 +133,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            <div class="stars" id="product-rating">
+              <a href="#" class="star star-all full" data-star="1"></a>
+              <a href="#" class="star star-all full" data-star="2"></a>
+              <a href="#" class="star star-all" data-star="3"></a>
+              <a href="#" class="star star-all" data-star="4"></a>
+              <a href="#" class="star star-all" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -142,9 +147,7 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
@@ -161,9 +164,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            <div class="stars" id="product-rating">
+              <a href="#" class="star star-all full" data-star="1"></a>
+              <a href="#" class="star star-all full" data-star="2"></a>
+              <a href="#" class="star star-all" data-star="3"></a>
+              <a href="#" class="star star-all" data-star="4"></a>
+              <a href="#" class="star star-all" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -172,9 +178,7 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
@@ -191,9 +195,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            <div class="stars" id="product-rating">
+              <a href="#" class="star star-all full" data-star="1"></a>
+              <a href="#" class="star star-all full" data-star="2"></a>
+              <a href="#" class="star star-all" data-star="3"></a>
+              <a href="#" class="star star-all" data-star="4"></a>
+              <a href="#" class="star star-all" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -202,9 +209,7 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
@@ -221,9 +226,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            <div class="stars" id="product-rating">
+              <a href="#" class="star star-all full" data-star="1"></a>
+              <a href="#" class="star star-all full" data-star="2"></a>
+              <a href="#" class="star star-all" data-star="3"></a>
+              <a href="#" class="star star-all" data-star="4"></a>
+              <a href="#" class="star star-all" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -232,9 +240,7 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
@@ -251,9 +257,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            <div class="stars" id="product-rating">
+              <a href="#" class="star star-all full" data-star="1"></a>
+              <a href="#" class="star star-all full" data-star="2"></a>
+              <a href="#" class="star star-all" data-star="3"></a>
+              <a href="#" class="star star-all" data-star="4"></a>
+              <a href="#" class="star star-all" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -262,9 +271,7 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
