--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -95,7 +95,18 @@
         color: rgb(42, 42, 42);
         @extend .far;
         @extend .fa-star;
-
+        // &.star {
+        //   &:hover {
+        //     color: #d58e32;
+        //     @extend .far;
+        //     @extend .fa-star;
+        //     @extend .fas;
+        //   }
+        // }
+        &.star-all.is-active {
+          color: #d58e32;
+          @extend .full;
+        }
         &.full {
           @extend .fas;
         }
