--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,9 +2,7 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto heading">
-          <h3>New furniture</h3>
-        </div>
+        <div class="col-auto heading"><h3>New furniture</h3></div>
         <div class="col menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
@@ -50,6 +48,7 @@
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
+              <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
@@ -82,9 +81,7 @@
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-            <div class="price">
-               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+              <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
@@ -117,9 +114,7 @@
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-            <div class="price">
-               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+              <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
@@ -150,9 +145,7 @@
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-            <div class="price">
-               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+              <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
@@ -183,9 +176,7 @@
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-            <div class="price">
-               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+              <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
@@ -214,9 +205,7 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
           </div>
         </div>
       </div>
@@ -246,9 +235,7 @@
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-            <div class="price">
-               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+              <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
@@ -279,9 +266,7 @@
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-            <div class="price">
-               <div class="btn-main-small no-hover old-price">$ 30.00</div>
+              <div class="btn-main-small no-hover old-price">$ 30.00</div>
             </div>
           </div>
         </div>
