Add recommendation from WDP190403-22 task

--- a/src/partials/20_section-promoted.html
+++ b/src/partials/20_section-promoted.html
@@ -1,7 +1,7 @@
 <div class="section--promoted">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col correctPadding">
         <div class="promoted-box">
           <div class="hot-deals">
             <div class="hot-deals-header">
@@ -151,7 +151,17 @@
             </div>
           </div>
           <div class="highlighted-product">
-            <img src="./images/sofa.jpg" alt="sorry..." />
+            <div class="products-carousel">
+              <div class="carousel-cell">
+                <img src="./images/sofa.jpg" alt="sorry..." />
+              </div>
+              <div class="carousel-cell">
+                <img src="./images/jadalnia.jpg" alt="sorry..." />
+              </div>
+              <div class="carousel-cell">
+                <img src="./images/sypialnia.jpg" alt="sorry..." />
+              </div>
+            </div>
             <div class="title"></div>
             <h1>INDOOR</h1>
             <h1 class="second">FURNITURE</h1>
