Add final styling

--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -96,7 +96,7 @@
                         <a href="#" class="full"></a> <a href="#" class="full"></a>
                         <a href="#"></a> <a href="#"></a> <a href="#"></a>
                       </div>
-                      <div class="priceCircle"><p>${{price}}</p><span>${{price}}</span></div>
+                      <div class="priceCircle"><p>${{promo}}</p><span>${{price}}</span></div>
                       <div class="triangleLeft"></div>
                       <div class="triangleRight"></div>
                     </div>
@@ -152,36 +152,7 @@
             role="tabpanel"
             aria-labelledby="nav-profile-tab"
           >
-            <div class="product-box">
-              <div class="photo pic-3">
-                <div class="sale">sale</div>
-                <div class="buttons">
-                  <a href="#" class="btn-main-small">Quick View</a>
-                  <a href="#" class="btn-main-small"
-                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                  >
-                </div>
-              </div>
-              <div class="content">
-                <h5>Aenean Ru Bristique</h5>
-                <div class="stars">
-                  <a href="#" class="full"></a> <a href="#" class="full"></a>
-                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
-                </div>
-              </div>
-              <div class="line"></div>
-              <div class="actions">
-                <div class="outlines">
-                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                  <a href="#" class="btn-outline active"
-                    ><i class="fas fa-exchange-alt"></i
-                  ></a>
-                </div>
-                <div class="price">
-                  <div class="btn-main-small no-hover">$ 30.00</div>
-                </div>
-              </div>
-            </div>
+            <p>placeholder</p>
           </div>
           <div
             class="tab-pane fade"
@@ -189,36 +160,7 @@
             role="tabpanel"
             aria-labelledby="nav-contact-tab"
           >
-            <div class="product-box">
-              <div class="photo pic-3">
-                <div class="sale">sale</div>
-                <div class="buttons">
-                  <a href="#" class="btn-main-small">Quick View</a>
-                  <a href="#" class="btn-main-small"
-                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                  >
-                </div>
-              </div>
-              <div class="content">
-                <h5>Aenean Ru Bristique</h5>
-                <div class="stars">
-                  <a href="#" class="full"></a> <a href="#" class="full"></a>
-                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
-                </div>
-              </div>
-              <div class="line"></div>
-              <div class="actions">
-                <div class="outlines">
-                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                  <a href="#" class="btn-outline active"
-                    ><i class="fas fa-exchange-alt"></i
-                  ></a>
-                </div>
-                <div class="price">
-                  <div class="btn-main-small no-hover">$ 30.00</div>
-                </div>
-              </div>
-            </div>
+            <p>placeholder</p>
           </div>
           <div
             class="tab-pane fade"
@@ -226,36 +168,7 @@
             role="tabpanel"
             aria-labelledby="nav-toprated-tab"
           >
-            <div class="product-box">
-              <div class="photo pic-3">
-                <div class="sale">sale</div>
-                <div class="buttons">
-                  <a href="#" class="btn-main-small">Quick View</a>
-                  <a href="#" class="btn-main-small"
-                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                  >
-                </div>
-              </div>
-              <div class="content">
-                <h5>Aenean Ru Bristique</h5>
-                <div class="stars">
-                  <a href="#" class="full"></a> <a href="#" class="full"></a>
-                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
-                </div>
-              </div>
-              <div class="line"></div>
-              <div class="actions">
-                <div class="outlines">
-                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                  <a href="#" class="btn-outline active"
-                    ><i class="fas fa-exchange-alt"></i
-                  ></a>
-                </div>
-                <div class="price">
-                  <div class="btn-main-small no-hover">$ 30.00</div>
-                </div>
-              </div>
-            </div>
+            <p>placeholder</p>
           </div>
         </div>
       </div>
@@ -263,7 +176,7 @@
         <div id="featured-gallery-image">
           <div>
             <p>from<span>$50.80</span></p>
-            <h3>Bedroom Bed</h3>
+            <p id="featuredTitle">Bedroom Bed</p>
             <button class="btn btn-success">
               shop now
             </button>
