Add hiding clases for furniture gallery

--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -1,7 +1,7 @@
 <div class="section--gallery">
   <div class="container">
     <div class="row">
-      <div class="col-6">
+      <div class="col-md-12 col-xl-6">
         <div class="panel-bar">
           <div class="row no-gutters align-items-end">
             <div class="col-auto heading">
@@ -172,7 +172,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-xl-6 d-none d-xl-block">
         <div id="featured-gallery-image">
           <div>
             <p>from<span>$50.80</span></p>
