--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,7 +16,7 @@
 @import "components/panel-bar";
 @import "components/post-box";
 @import "components/product-box";
-
+@import "components/section--brands";
 @import "components/section--features";
 
 body {
