--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -42,7 +42,7 @@
         </div>
         <div class="col text-right cart">
           <a href="#" class="cart-box">
-            <div class="box-line">
+            <div class="cart-container">
               <div class="cart-icon"><i class="fas fa-shopping-basket"></i></div>
               <div class="cart-counter">123</div>
             </div>
