--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -72,7 +72,7 @@ header {
         color: #ffffff;
         text-decoration: none;
 
-        .box-line {
+        .cart-container {
           display: flex;
           align-items: center;
 
