Added flexbox to section without col- and change images for more quality

--- a/src/partials/80_section-brands.html
+++ b/src/partials/80_section-brands.html
@@ -1,17 +1,15 @@
 <div class="section--brands">
   <div class="container brands">
     <div class="row">
-      <div class="col-12">
-        <div class="brands-container">
-          <button class="brands-arrow"><i class="fas fa-angle-left"></i></button>
-          <div class="col-2"><div class="images-brands brand-1"></div></div>
-          <div class="col-2"><div class="images-brands brand-2"></div></div>
-          <div class="col-2"><div class="images-brands brand-3"></div></div>
-          <div class="col-2"><div class="images-brands brand-4"></div></div>
-          <div class="col-2"><div class="images-brands brand-5"></div></div>
-          <div class="col-2"><div class="images-brands brand-6"></div></div>
-          <button class="brands-arrow"><i class="fas fa-angle-right"></i></button>
-        </div>
+      <div class="col-12 brands-container">
+        <button class="brands-arrow"><i class="fas fa-angle-left"></i></button>
+        <div class="images-brands brand-1"></div>
+        <div class="images-brands brand-2"></div>
+        <div class="images-brands brand-3"></div>
+        <div class="images-brands brand-4"></div>
+        <div class="images-brands brand-5"></div>
+        <div class="images-brands brand-6"></div>
+        <button class="brands-arrow"><i class="fas fa-angle-right"></i></button>
       </div>
     </div>
   </div>
