--- a/src/sass/components/_section--brands.scss
+++ b/src/sass/components/_section--brands.scss
@@ -5,7 +5,7 @@
   padding: 20px;
 
   .brands-container {
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -31,10 +31,10 @@
   }
 
   .images-brands {
-    padding: 90% 10px 0 10px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    opacity: 0.9;
+    padding: 10% 10px 0 10px;
+    margin: 15px;
+    flex-grow: 1;
+    opacity: 0.8;
     border: 1px solid #e1e1e1;
     background-size: 100px 100px;
     background-position: center;
